<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="counter"
            type="String" />

        <variable
            name="scramble"
            type="String" />

        <variable
            name="statistics"
            type="com.example.timer.model.Statistics" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/areaToClick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.timer.ui.main.MainActivity">

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFF000"
            android:padding="20dp"
            android:text="@{counter}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scramble"
            android:layout_width="355dp"
            android:layout_height="66dp"
            android:layout_marginBottom="253dp"
            android:layout_marginTop="73dp"
            android:background="#FFF000"
            android:gravity="center"
            android:text="@{scramble}"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Mo3"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mo3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ao5"
            app:layout_constraintBottom_toTopOf="@+id/avg12"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/avg5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ao12"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ao50"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Ao100"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/mo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="149dp"
            android:text="@{statistics.formattedMo3}"
            app:layout_constraintBottom_toTopOf="@+id/avg5"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="mo3" />

        <TextView
            android:id="@+id/avg5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{statistics.formattedAvg5}"
            app:layout_constraintBottom_toTopOf="@+id/avg12"
            app:layout_constraintEnd_toEndOf="@+id/mo3"
            tools:text="avg5" />

        <TextView
            android:id="@+id/avg12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{statistics.formattedAvg12}"
            app:layout_constraintBottom_toTopOf="@+id/avg50"
            app:layout_constraintEnd_toEndOf="@+id/mo3"
            tools:text="avg12" />

        <TextView
            android:id="@+id/avg50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@{statistics.formattedAvg50}"
            app:layout_constraintBottom_toTopOf="@+id/avg100"
            app:layout_constraintEnd_toEndOf="@+id/mo3"
            tools:text="avg50" />

        <TextView
            android:id="@+id/avg100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@{statistics.formattedAvg100}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mo3"
            tools:text="avg100" />

        <com.example.timer.ui.views.ThreeByThreeScrambleDrawer
            android:id="@+id/threeByThreeScrambleDrawer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toTopOf="@+id/mo3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counter" />

    </android.support.constraint.ConstraintLayout>
</layout>